--- a/day-1-fancy-buttons/sandbox.css
+++ b/day-1-fancy-buttons/sandbox.css
@@ -137,3 +137,229 @@
     Gradient Button - 1
 
    ====================================== */
+   .gradient-button-1{
+       border-width: 4px;
+       border-style: solid;
+       border-image: linear-gradient(to top right,red,yellow);
+       border-image-slice: 1;
+       padding: 10px 15px;
+       color: orangered;
+       transition: all 0.5s ease-in-out;
+   }
+
+   .gradient-button-1:hover{
+       background-image: linear-gradient(to top right,red,yellow);
+       color: white;
+   }
+
+   /* ========================================
+
+    Gradient Button - 2
+
+   ====================================== */
+   .gradient-button-2{
+    border-width: 4px;
+    border-style: solid;
+    border-image: linear-gradient(to right, red, rgba(255,0,0,0));
+    border-image-slice: 1;
+    padding: 10px 15px;
+    color: orangered;
+    transition: all 0.5s ease-in-out;
+   }
+
+   .gradient-button-2:hover{
+    background-image: linear-gradient(to right, red,  rgba(255,0,0,0));
+    color: white;
+    border-right-style: none; /* to fix right border */
+   }
+
+
+    /* ========================================
+
+    Animated Button - 1
+
+   ====================================== */
+
+
+   .animated-button-1{
+       position: relative;
+       display: inline-block;
+       padding: 20px 40px;
+       font-size: 1.4rem;
+       background-color: #00b3b4;
+
+
+       background-image: url(pattern.png);
+       background-size: 40px 40px;
+       border: solid 1px #555;
+       color: white;
+       transition: all 0.5s ease-in;
+   }
+
+   .animated-button-1:hover{
+       animation: btn-1-animation 2s linear infinite;
+   }
+
+   @keyframes btn-1-animation{
+       from{
+           background-position: 0 0;
+       } to{
+           background-position: 40px 0;
+       }
+   }
+
+
+   /* ========================================
+
+    Animated Button - 2
+
+   ====================================== */
+
+
+   .animated-button-2{
+    position: relative;
+    display: inline-block;
+    padding: 20px 40px;
+    font-size: 1.4rem;
+    background-color: #00b3b4;
+
+
+    border: solid 1px #555;
+    color: white;
+    transition: all 0.5s ease-in;
+}
+
+.animated-button-2::after{
+    position: absolute;
+    top: 30%;
+    right: 0;
+    content: "»";
+    color: white;
+    opacity: 0;
+    transition: all 0.5s ease-in;
+}
+.animated-button-2:hover{
+    padding: 20px 60px 20px 20px;
+}
+.animated-button-2:hover::after{
+  right: 1.2em;
+  opacity: 1;
+}
+
+
+
+
+   /* ========================================
+
+    Toggle Switch Button - 1
+
+   ====================================== */
+
+.toggle-1{
+    font-family: 'Courier New', Courier, monospace;
+    display: inline-block;
+    vertical-align: top;
+    margin: 0 15px 0 0;
+}
+
+.toggle-1__input{
+    display: none;
+
+}
+
+.toggle-1__button{
+    position: relative;
+    display: inline-block;
+    font-size: 1rem;
+    line-height: 20px;
+    text-transform: uppercase;
+    background-color: #f2395a;
+    border: 1px solid #f2395a;
+    color: white;
+    height: 30px;
+    width: 80px;
+    transition: all 0.2s ease;
+    cursor: pointer;
+}
+
+
+.toggle-1__button::before{
+    position: absolute;
+    top: 5px;
+    left: 40px;
+    content: "off";
+    display: inline-block;
+    height: 20px;
+    padding: 0 3px;
+    background: white;
+    transition: all 0.2s ease; 
+    color: #f2395a;
+}
+
+.toggle-1__input:checked + .toggle-1__button{
+    background: #00b3b4;
+    border: 1px solid #00b3b4;
+}
+
+.toggle-1__input:checked + .toggle-1__button::before{
+    left: 5px;
+    content: "on";
+    color: #00b3b4;
+}
+
+
+
+   /* ========================================
+
+    Toggle Switch Button - 2
+
+   ====================================== */
+
+   .toggle-2{
+       font-family: 'Courier New', Courier, monospace;
+       display: inline-block;
+       font-size: 0.8rem;
+       vertical-align: top;
+       margin: 0 15px 0 0;
+
+   }
+
+   .toggle-2__input{
+       display: none;
+   }
+
+   .toggle-2__button{
+       position: relative;
+       display: inline-block;
+       line-height: 20px;
+       text-transform: uppercase;
+       background: white;
+       color: #aaa;
+       border: solid 1px #ccc;
+       padding: 5px 10px 5px 30px;
+       transition: all 0.2s ease;
+       cursor: pointer;
+   }
+
+   .toggle-2__button::before{
+       position: absolute;
+       top: 10px;
+       left: 10px;
+       display: inline-block;
+       width: 10px;
+       height: 10px;
+       background: #ccc;
+       content: "";
+       transition: all 0.2s ease;
+       border-radius: 50%;
+   }
+
+   .toggle-2__input:checked + .toggle-2__button{
+       background: #00b3b4;
+       border-color: #00b3b4;
+       color: white;
+   }
+
+   .toggle-2__input:checked + .toggle-2__button::before{
+       background-color: white;
+   }
